--- a/mss.tex
+++ b/mss.tex
@@ -506,7 +506,7 @@ Lagoon\footnote{Linear AlGebra in hOON} is an Urbit library to facilitate Hoon-n
 \noindent
 for which \texttt{\%real} allows the rounding mode to be specified; \texttt{\%cplx} consists of a pair of two values, real and imaginary parts; and \texttt{\%fixp} requires an additional metadata statement of the expected precision.
 
-Lagoon implements algorithmically correct reference implementation in Hoon with the expectation that \texttt{/lib/lagoon} will be jetted.  Operations include basic arithmetic, vector and matrix row/column operations, matrix multiplication, and matrix inversion.  The jetting scheme may take advantage of software libraries or appropriate hardware, but must hew to the dictum that “if it's not deterministic, it isn't real.”
+Lagoon implements algorithmically correct reference implementation in Hoon with the expectation that \texttt{/lib/lagoon} will be jetted.  Operations include basic arithmetic, vector and matrix row/column operations, matrix multiplication, and matrix inversion.  The jetting scheme may take advantage of software libraries or appropriate hardware, but must hew to the dictum that “if it's not deterministic, it isn't real.”\footnote{It is a worth a final digression to address reproducibility on parallel systems.  We do not consider this a design goal for Lagoon at the current time, since Urbit is inherently single-threaded.  Operations like reduction must take place on a single computer; while jets may in principle utilize parallelism their points of entry and exit are unique.  However, we note that the \texttt{ReproBLAS} project has addressed this issue in the context of reproducible parallelism \citep{ReproBLAS}, as has \citeauthor{Chohra2016}}  % no period for et al.
 
 Lagoon has passed through several implementations and remains in active development.  The current implementation is the \texttt{lagoon} branch of the \texttt{urbit/urbit} repository \citep{Urbit}.
 
@@ -524,8 +524,7 @@ To summarize, the most promising solutions for floating-point mathematics on Urb
   \item  Replacing IEEE 754 with another approach of sufficient speed, fixed-point and unum/posits chief among these.
 \end{enumerate}
 
-Several recent efforts on Urbit have encountered the difficulties of producing fast and reliable floating-point calculations on a Nock-based system.\footnote{UWasm, which as a WebAssembly implementation directly relies on floating-point computations \citep{UWasm} (see e.g. \citet{KloudKoder2022} for a discussion of the issues involved); \texttt{lazytrig}, which is slow and implemented purely in Hoon (Nock); Lagoon, which includes IEEE 754 operations with its linear algebra library (\emph{q.v.}); and Lora, TODO.}  We anticipate that, water finding its own level, each will adopt a suitable solution for the deterministic Nock platform.  We do not anticipate these to be the last foundational numerical libraries built on Urbit, but instead among the first.  Thus we have documented the paths we have explored as an annotated map for future travelers in search of a one true representation for continuous mathematics.
-% UWasm 
+Several recent efforts on Urbit have encountered the difficulties of producing fast and reliable floating-point calculations on a Nock-based system.\footnote{UWasm or UrWasm, which as a WebAssembly implementation directly relies on floating-point computations \citep{UWasm} (see e.g. \citet{KloudKoder2022} for a discussion of the issues involved); \texttt{lazytrig}, which is slow and implemented purely in Hoon (Nock); Lagoon, which includes IEEE 754 operations with its linear algebra library (\emph{q.v.}); and Lora.}  We anticipate that, water finding its own level, each will adopt a suitable deterministic solution for evaluation in Nock.  We do not anticipate these to be the last foundational numerical libraries built on Urbit, but instead among the first.  Thus we have documented the paths we have explored as an annotated map for future travelers in search of a one true representation for continuous mathematics.
 
 \bibliographystyle{plainnat}
 \bibliography{ustj-fp}
