--- a/ustj-fp.bib
+++ b/ustj-fp.bib
@@ -34,6 +34,23 @@ year = 2018,
 url = "https://gitlab.com/cerlane/SoftPosit",
 }
 
+@InProceedings{Chohra2016,
+author="Chohra, Chemseddine
+and Langlois, Philippe
+and Parello, David",
+editor="Nehmeier, Marco
+and Wolff von Gudenberg, J{\"u}rgen
+and Tucker, Warwick",
+title="Efficiency of Reproducible Level 1 BLAS",
+booktitle="Scientific Computing, Computer Arithmetic, and Validated Numerics",
+year="2016",
+publisher="Springer International Publishing",
+address="Cham",
+pages="99--108",
+abstract="Numerical reproducibility failures appear in massively parallel floating-point computations. One way to guarantee this reproducibility is to extend the IEEE-754 correct rounding to larger computing sequences, e.g. to the BLAS. Is the extra cost for numerical reproducibility acceptable in practice? We present solutions and experiments for the level 1 BLAS and we conclude about their efficiency.",
+isbn="978-3-319-31769-4"
+}
+
 @inproceedings{Citron1998,
 author = "D. Citron and D. Feitelson and L. Rudolph",
 title = "Accelerating multi-media processing by implementing memoing in multiplication and division units",
@@ -78,7 +95,7 @@ doi = "10.1137/S0036144595293959",
 }
 
 @phdthesis{Figueroa2000,
-author = "S. A. Figueroa del Cid",
+author = "S. A. {Figueroa del Cid}",
 title = "A Rigorous Framework for Fully Supporting the {IEEE} Standard for Floating-Point Arithmetic in High-Level Programming Languages",
 school = "New York University",
 year = 2000,
